--- a/index.html
+++ b/index.html
@@ -2,26 +2,27 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>SuperType</title>
+    <link rel="stylesheet" href="assets/css/style.css"/>
   </head>
   <body>
-      <div class="flex columm full-height">
-        <header>
-          <h1>SuperType</h1>
-        </header>
+    <div class="flex column full-height">
+      <header>
+        <h1>SuperType</h1>
+      </header>
 
-        <ul></ul>
+      <ul>
+      </ul>
 
-        <footer>
-            <input type="text" id="noteText">
-            <div><input type="checkbox" id="noteImportant"> Important</div>
-            <input type="datetime-local" id="noteTime">
-            <button id="addNote">Add</button>
-        </footer>
-      </div>
+      <footer>
+        <input type="text" id="noteText"/>
+        <div><input type="checkbox" value="1" id="noteImportant"/>Important</div>
+        <input type="datetime-local" id="noteTime"/>
+        <button id="addNote">Add</button>
+      </footer>
+    </div>
 
-      <script src="assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
