--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div><input type="checkbox" value="1" id="noteImportant"/>Important</div>
         <input type="datetime-local" id="noteTime"/>
         <button id="addNote">Add</button>
+        <button id="edit">Edit</button>
       </footer>
     </div>
 
